[gd_scene load_steps=17 format=3 uid="uid://c1n4kfr86y6ah"]

[ext_resource type="Script" path="res://scenes/Enemy/world_4_enemy.gd" id="1_160g5"]
[ext_resource type="Texture2D" uid="uid://w3ly6cgxj84v" path="res://assets/sprites/Characters/Robot/attack/attack.png" id="1_y6nuy"]
[ext_resource type="Texture2D" uid="uid://xydyogi8r2dj" path="res://assets/sprites/Characters/Robot/movement/enemy.png" id="2_lfr4a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jgmq3"]
atlas = ExtResource("1_y6nuy")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgwf6"]
atlas = ExtResource("1_y6nuy")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx0dc"]
atlas = ExtResource("1_y6nuy")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74qgk"]
atlas = ExtResource("1_y6nuy")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfhjh"]
atlas = ExtResource("1_y6nuy")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dhrd"]
atlas = ExtResource("1_y6nuy")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kchq6"]
atlas = ExtResource("2_lfr4a")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5km51"]
atlas = ExtResource("2_lfr4a")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d31l"]
atlas = ExtResource("2_lfr4a")
region = Rect2(128, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n3wb"]
atlas = ExtResource("2_lfr4a")
region = Rect2(192, 64, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k5xj6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgmq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgwf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx0dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74qgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfhjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dhrd")
}],
"loop": false,
"name": &"attack_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kchq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5km51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d31l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n3wb")
}],
"loop": true,
"name": &"right",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_43k0q"]
radius = 3.80789

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nx2d"]
size = Vector2(16, 31.5)

[node name="world_4_enemy" type="CharacterBody2D"]
script = ExtResource("1_160g5")

[node name="enemy" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k5xj6")
animation = &"right"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 11.5)
shape = SubResource("CircleShape2D_43k0q")

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(12, -1)
shape = SubResource("RectangleShape2D_4nx2d")

[node name="detection_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_box"]
position = Vector2(12, -1)
shape = SubResource("RectangleShape2D_4nx2d")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="enemy" to="." method="_on_enemy_animation_finished"]
[connection signal="body_entered" from="detection_box" to="." method="_on_detection_box_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
